# ml-forecasting

./: .gitignore  README.md  makefile  pyproject.toml
ml-forecasting/: data_exploration.ipynb  model_evaluation.ipynb  model_training.ipynb
ml-forecasting/data/outputs/model/: Y_test.pkl
