[tool.poetry]
name = "ml-task"
version = "0.1.0"
description = "Machine learning forecasting task"
authors = ["Ed Jeffrey <edjeffrey05@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0"
numpy = "^1.24"
ipykernel = "^6.30.1"
scipy = "^1.16.1"
scikit-learn = "^1.7.1"
folium = "^0.20.0"
geopandas = "^1.1.1"
matplotlib = "^3.10.6"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
